# anoncreds-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.py  main.py  pyproject.toml
app/: __init__.py  utils.py
app/models/: anoncreds.py  claims.py  credential.py  issuer.py  presentation.py  schema.py  vc_api.py  web_requests.py
app/plugins/: __init__.py  anoncreds.py  askar.py
app/routers/: holder.py  issuer.py  issuers.py  operations.py  resources.py  schemas.py  utilities.py  vc_api.py  verifier.py  verifiers.py  wallets.py
demo/: config.py  main.py  pyproject.toml
demo/app/: __init__.py  utils.py
demo/app/plugins/: anoncreds.py  askar.py
demo/app/routes/wizard/: __init__.py  forms.py
demo/app/static/demo/: credit-card.json  holder.json  rebates-card.json
demo/app/static/demo/credentials/: credit-card copy.json  credit-card.json  rebates-card copy.json  rebates-card.json
demo/app/static/demo/presentations/: purchase.json  shoes-purchase copy.json  shoes-purchase.json  shorts-purchase.json
demo/app/templates/components/: credit-card.jinja  footer.jinja  membership-card.jinja  nav.jinja  receipt-shoes.jinja  receipt-shorts.jinja
demo/app/templates/components/modals/: checkout-shoes.jinja  checkout-shorts.jinja  claims.jinja  issue-credit-card.jinja  issue-rebates-card.jinja  receipts.jinja  statements.jinja  wallet.jinja
demo/app/templates/layouts/: base.jinja  base.wizard.jinja
demo/app/templates/pages/: index.jinja
demo/app/templates/wizard/: 00_index.jinja  01_claims.jinja  02_schema.jinja  03_issuer.jinja
samples/: cc_demo.json
src/: demo.rs  lib.rs
tests/: fixtures.py  test_claims.py
